# cmake-build-extension

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python.yml
example/: CMakeLists.txt  pyproject.toml  setup.cfg  setup.py
example/bindings_pybind11/: CMakeLists.txt  bindings.cpp
example/bindings_swig/: CMakeLists.txt  bindings.i
example/src/: mymath.cpp  mymath.h  print_answer.cpp
example/tests/: test_pybind11.py  test_swig.py
examples/swig/: CMakeLists.txt  pyproject.toml  setup.cfg  setup.py
examples/swig/src/: mymath.cpp
examples/swig/tests/: test_mymath.py
src/cmake_build_extension/: __init__.py  build_ext_option.py  build_extension.py  cmake_extension.py  sdist_command.py
