[metadata]
name = cmake-build-extension
description = Setuptools extension to build and package CMake projects
long_description = file: README.md; charset=UTF-8
long_description_content_type = text/markdown
author = Diego Ferigo
author_email = dgferigo@gmail.com
license = MIT
license_file = LICENSE
platforms = any
url = https://github.com/diegoferigo/cmake-build-extension

project_urls =
    Source = https://github.com/diegoferigo/cmake-build-extension
    Tracker = https://github.com/diegoferigo/cmake-build-extensionn/issues

keywords =
    setuptools
    extension
    cmake
    build
    package
    pypi

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.6
install_requires =
    cmake
    ninja

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-icdiff
all =
    %(testing)s
