[build-system]
requires = [
    "wheel",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.0",
    # "cmake_build_extension", # EXPERIMENT: It seems that building the examples is downloading the last release instead of using the local copy.
    "numpy",
    "pybind11",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
