[metadata]
name = mymath
description = Example to show how to use cmake-build-extension with CMake, SWIG and NumPy
long_description = file: README.md; charset=UTF-8
long_description_content_type = text/markdown
author = Diego Ferigo
author_email = dgferigo@gmail.com
license = MIT
platforms = any
url = https://github.com/diegoferigo/cmake-build-extension
project_urls =
    Source = https://github.com/diegoferigo/cmake-build-extension
    Tracker = https://github.com/diegoferigo/cmake-build-extensionn/issues
keywords = setuptools extension cmake build package pypi swig
classifiers =

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.6
install_requires =
    numpy
    cmake-build-extension

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-icdiff
all =
    %(testing)s

[options.entry_points]
console_scripts =
    print_answer = mymath.bin.__main__:main
